<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludos"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etGenero"
        />
    <EditText
        android:id="@+id/etGenero"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/tvGenero"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:background="@color/purple"/>
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvGenero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etNombre"
        />
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvGenero"
        app:layout_constraintLeft_toRightOf="@id/tvNombre"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:background="@color/purple"/>
    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etApellido"
        />
    <EditText
        android:id="@+id/etApellido"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        app:layout_constraintLeft_toRightOf="@id/tvApellido"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:background="@color/purple"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="135dp" />
    <TextView
        android:id="@+id/tvVenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/venta"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etVenta"
        />
    <EditText
        android:id="@+id/etVenta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintLeft_toRightOf="@id/tvVenta"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:background="@color/purple"/>
    <TextView
        android:id="@+id/tvPagado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pagado"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvVenta"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etPagado"
        />
    <EditText
        android:id="@+id/etPagado"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvVenta"
        app:layout_constraintLeft_toRightOf="@id/tvPagado"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:background="@color/purple"/>
    <TextView
        android:id="@+id/tvCuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cuenta"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvPagado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etCuenta"
        />
    <EditText
        android:id="@+id/etCuenta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvPagado"
        app:layout_constraintLeft_toRightOf="@id/tvCuenta"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:background="@color/purple"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="425dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="650dp" />
    <Button
        android:id="@+id/butAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintRight_toLeftOf="@id/butCancelar"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/butCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/cancelar"
        app:layout_constraintLeft_toRightOf="@id/butAceptar"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>